# bac-py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  SECURITY.md  main.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
design_docs/: 01_architecture_overview.md  02_data_types_and_encoding.md  03_network_and_transport.md  04_application_services.md  05_object_model.md  06_async_and_concurrency.md  07_implementation_roadmap.md  08_serialization.md
docker/: .dockerignore  Dockerfile  conftest.py  docker-compose.yml  entrypoint.py
docker/demos/: demo_client.py  thermostat.py
docker/lib/: bbmd_stress.py  bbmd_stress_runner.py  bip_stress.py  router_stress.py  router_stress_runner.py  sc_pki.py  sc_stress.py  sc_stress_runner.py  stress_runner.py
docker/scenarios/: test_bbmd.py  test_bbmd_stress.py  test_client_server.py  test_cov_advanced.py  test_device_mgmt.py  test_events.py  test_ipv6_client_server.py  test_mixed_bip_ipv6.py  test_mixed_bip_sc.py  test_router.py  test_router_stress.py  test_sc_stress.py  test_secure_connect.py  test_stress.py
docs/: conf.py  examples.rst  features.rst  getting-started.rst  index.rst  migration.rst
docs/api/: app.rst  conformance.rst  encoding.rst  index.rst  network.rst  objects.rst  segmentation.rst  serialization.rst  services.rst  transport.rst  types.rst
docs/api/app/: client.rst  engines.rst  index.rst  server.rst
docs/guide/: benchmarks.rst  client-guide.rst  debugging-logging.rst  device-management.rst  discovery-networking.rst  events-alarms.rst  examples.rst  reading-writing.rst  secure-connect.rst  security.rst  server-mode.rst  transport-setup.rst
examples/: README.md  advanced_discovery.py  alarm_management.py  audit_log.py  backup_restore.py  client_operations.py  configuration.py  cov_property.py  device_control.py  device_discovery.py  discover_devices.py  discovery.py  ethernet_server.py  extended_discovery.py  foreign_device.py  interactive_cli.py  ip_to_sc_router.py  ipv6_client.py  ipv6_client_server.py  ipv6_server.py  monitor_cov.py  object_management.py  read_multiple.py  read_property.py  read_value.py  router_discovery.py  sc_generate_certs.py  sc_server.py  secure_connect.py  secure_connect_hub.py  server_operations.py  text_message.py  write_multiple.py  write_property.py  write_value.py
scripts/: bench_bbmd.py  bench_bip.py  bench_router.py  bench_sc.py
src/bac_py/: __init__.py  client.py
src/bac_py/app/: cov.py  (+10 more)
tests/: conftest.py  helpers.py  test_client.py  test_client_wrappers.py  test_ethernet_transport_integration.py  test_examples.py  test_optimizations.py  test_sc_transport_integration.py  test_scripts.py  test_security_hardening.py  test_smoke.py
tests/app/: test_application.py  test_audit.py  test_backup_restore.py  test_client.py  test_convenience.py  test_cov.py  test_discover.py  test_discovery.py  test_event_algorithms.py  test_event_engine.py  test_event_engine_integration.py  test_event_handlers.py  test_event_state_machine.py  test_list_element_handlers.py  test_schedule_engine.py  test_server.py  test_smart_encoding.py  test_trendlog_engine.py  test_tsm.py  test_unconfigured_discovery.py
tests/conformance/: test_bibb.py  test_pics.py
tests/encoding/: test_apdu.py  test_constructed_encoding.py  test_decode_values.py  test_encode_property_value.py  test_encoding_architecture.py  test_encoding_edge_cases.py  test_phase5_encoding_architecture.py  test_primitives.py  test_property_encoding_completeness.py  test_tags.py  test_time_series.py
tests/integration/: test_router_bbmd.py
tests/network/: conftest.py  test_address.py  test_address_ipv6.py  test_layer.py  test_messages.py  test_npdu.py  test_parse_address.py  test_router.py  test_routing_table.py
tests/objects/: test_access_control.py  test_accumulator.py  test_alert_enrollment.py  test_analog.py  test_audit_log.py  test_audit_reporter.py  test_averaging.py  test_base.py  test_behavior_validation.py  test_binary.py  test_calendar.py  test_calendar_eval.py  test_channel.py  test_command_obj.py  test_commandable.py  test_commandable_value_source.py  test_date_time_values.py  test_device.py  test_event_enrollment.py  test_event_log.py  test_file.py  test_hooks_and_reporting.py  test_life_safety.py  test_lighting.py  test_load_control.py  test_loop.py  test_min_on_off_time.py  test_missing_types.py  test_multistate.py  test_network_port.py  test_notification.py  test_notification_forwarder.py  test_object_properties.py  test_objects.py  test_phase3_objects.py  test_phase7_hooks_and_reporting.py  test_program.py  test_property_definitions.py  test_pulse_converter.py  test_registration.py  (+8 more)
tests/segmentation/: test_integration.py  test_manager.py
tests/serialization/: test_json.py
tests/services/: test_alarm_summary.py  test_audit.py  test_base.py  test_cov.py  test_cov_advanced.py  test_device_discovery.py  test_device_mgmt.py  test_errors.py  test_event_notification.py  test_fault_algorithms.py  test_file_access.py  test_list_element.py  test_object_mgmt.py  test_private_transfer.py  test_read_property.py  test_read_property_multiple.py  test_read_range.py  test_text_message.py  test_virtual_terminal.py  test_who_has.py  test_who_is.py  test_write_group.py  test_write_property.py  test_write_property_multiple.py
tests/transport/: conftest.py  test_bbmd.py  test_bbmd6.py  test_bbmd_advanced.py  test_bip.py  test_bip6.py  test_bip_bbmd.py  test_bip_multicast.py  test_bvll.py  test_bvll_ipv6.py  test_ethernet.py  test_foreign_device.py  test_foreign_device6.py
tests/types/: test_audit_types.py  test_constructed.py  test_constructed_types.py  test_enums.py  test_fault_params.py  test_notification_params.py  test_parsing.py  test_primitives.py  test_timestamp.py  test_value_source.py
tools/: __init__.py  __main__.py  cli.py  connection.py  encoding.py  formatting.py  parsers.py
tools/commands/: read.py  rpm.py  scan.py  whohas.py  whois.py  write.py
(+130 files in other folders)
