[project]
name = "bac-py"
version = "0.1.0"
description = "Asynchronous BACnet library for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
serialization = ["orjson>=3.10"]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage>=7.0",
]
lint = [
    "ruff>=0.8",
]
type-check = [
    "mypy>=1.13",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "sphinx-autodoc-typehints>=2.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type-check" },
    { include-group = "docs" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.5"

[tool.hatch.build.targets.wheel]
packages = ["src/bac_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bac_py"]
