[project]
name = "bac-py"
version = "0.1.0"
description = "Asynchronous BACnet/IP protocol library for Python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Justin Scott", email = "jscott3201@gmail.com" }]
keywords = [
    "bacnet",
    "building-automation",
    "hvac",
    "ashrae",
    "bacnet-ip",
    "iot",
    "asyncio",
    "scada",
    "bms",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
serialization = ["orjson>=3.10"]
cli = ["click>=8.1"]

[project.urls]
Repository = "https://github.com/jscott3201/bac-py"
Documentation = "https://jscott3201.github.io/bac-py"
Issues = "https://github.com/jscott3201/bac-py/issues"

[dependency-groups]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "coverage>=7.0"]
lint = ["ruff>=0.8"]
type-check = ["mypy>=1.13"]
docs = ["sphinx>=8.0", "furo>=2024.8", "sphinx-autodoc-typehints>=2.0"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type-check" },
    { include-group = "docs" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.5"

[tool.hatch.build.targets.wheel]
packages = ["src/bac_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests requiring network or external resources"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bac_py"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",
    "W",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D212", # multi-line-summary-first-line (conflicts with D213)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # don't require docstrings in tests

[tool.coverage.run]
source = ["src/bac_py"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
