[project]
name = "bac-py"
version = "1.5.7"
description = "Asynchronous BACnet protocol library for Python — BACnet/IP, IPv6, Ethernet, and Secure Connect"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Justin Scott", email = "jscott3201@gmail.com" }]
keywords = [
    "bacnet",
    "building-automation",
    "hvac",
    "ashrae",
    "bacnet-ip",
    "bacnet-sc",
    "iot",
    "asyncio",
    "scada",
    "bms",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
serialization = ["orjson>=3.10"]
secure = ["websockets>=14.0", "cryptography>=42.0"]

[project.urls]
Repository = "https://github.com/jscott3201/bac-py"
Documentation = "https://jscott3201.github.io/bac-py"
Issues = "https://github.com/jscott3201/bac-py/issues"
Changelog = "https://github.com/jscott3201/bac-py/blob/main/CHANGELOG.md"

[dependency-groups]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "coverage>=7.0"]
lint = ["ruff>=0.8"]
type-check = ["mypy>=1.13"]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "sphinx-autodoc-typehints>=2.0",
    "websockets>=14.0",
    "cryptography>=42.0",
    "orjson>=3.10",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type-check" },
    { include-group = "docs" },
    "myst-parser>=5.0.0",
    "pyinstrument>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.5"

[tool.hatch.build.targets.wheel]
packages = ["src/bac_py"]

[tool.hatch.build.targets.sdist]
exclude = [
    "docker/",
    "scripts/",
    "docs/",
    ".github/",
    "Makefile",
    "ruff.toml",
    "uv.lock",
    ".python-version",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests requiring network or external resources"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bac_py"]

# Ruff configuration lives in ruff.toml (takes precedence over pyproject.toml).

[tool.coverage.run]
source = ["src/bac_py"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
